--- a/style/header.css
+++ b/style/header.css
@@ -15,7 +15,14 @@
             --second-bg-color: #1d1d1d;
             --text-color: #00c40a;
             --main-color: #19551e;
-            --bg-h-color: #161718; }
+            --bg-h-color: #161718;
+            --green1: #002502;
+            --green2: #0f3811;
+            --green3: #315332;
+            --green4: #67a769;
+            --test1: #a6ff00;
+            --test2: #e00700;
+            --test3: #2200e4; }
 
 
 
