--- a/style/a.database.css
+++ b/style/a.database.css
@@ -1,3 +1,9 @@
+.home-content .text-animate {
+    position: relative;
+    max-width: 16rem;
+    width: 9 rem; }/*ubah rem*/
+
+
 .animate {
     position: absolute;
     top: 0;
@@ -24,7 +30,7 @@
 @keyframes homeBgText{
     0%,
     10%,
-    100% { background-position: -9rem 0; }/*ubah rem*/
+    100% { background-position: -16rem 0; }/*ubah rem*/
 
     65%,
     85% { background-position: 0 0; }}
