--- a/style/konten.css
+++ b/style/konten.css
@@ -292,15 +292,51 @@ table td button:hover::before {
 */
 
 
+.container footer {
+    margin-top: 25px;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+footer .pagination {
+    display: flex;
 
+}
 
+footer .pagination button {
+    width: 40px;
+    padding: 5px 0;
+    color: var(--test1);
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    pointer-events: auto;
+    outline: none;
+    border: 1px solid var(--test2);
+    /*border-left: none;*/
+    margin: 0;
+}
 
+.pagination button:first-child {
+    width: 85px;
+    border-radius: 5px;
+    /*border-left: 1px solid var(--test3);*/
+    opacity: 0.6;
+    pointer-events: none;
+}
 
+.pagination button:last-child {
+    width: 85px;
+    border-radius: 5px;
+    opacity: 0.6;
+    pointer-events: none;
+}
 
-
-
-
+.pagination button.active, .pagination button:hover {
+    background: var(--test1);
+}
 
 
 
