--- a/style/konten.css
+++ b/style/konten.css
@@ -188,18 +188,21 @@ header .addItemBtn button, .popup header .closeBtn, .popup footer .submitBtn {
 
 .container table thead tr th:nth-child(1) {width: 1%;}
 .container table thead tr th:nth-child(2) {width: 30%;}
-.container table thead tr th:nth-child(3) {width: 1%;}
+.container table thead tr th:nth-child(3) {width: 10%;}
 .container table thead tr th:nth-child(4) {width: 1%;}
 .container table thead tr th:nth-child(5) {width: 1%;}
-.container table thead tr th:nth-child(6) {width: 1%;}
-.container table thead tr th:nth-child(7) {width: 1%;}
+.container table thead tr th:nth-child(6) {width: 10%;}
+.container table thead tr th:nth-child(7) {width: 10%;}
 .container table thead tr th:nth-child(8) {width: 17%;} /* angka tetap */
 
 .container table tbody tr td:nth-child(1), .container table tbody tr td:nth-child(3),
 .container table tbody tr td:nth-child(4), .container table tbody tr td:nth-child(5),
 .container table tbody tr td:nth-child(6), .container table tbody tr td:nth-child(7) {
     text-align: right;
-    
+}
+
+.container table tbody tr td:nth-child(2) {
+    text-align: left;
 }
 
 
